--- a/mypubs.bib
+++ b/mypubs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Laura Leal-Taixé at 2016-07-20 12:03:44 +0200 
+%% Created for Laura Leal-Taixé at 2016-07-26 10:17:02 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -11,11 +11,27 @@
 
 @article{fenziiccv2015,
 	Author = {M. Fenzi and {\bf L. Leal-Taix{\'e}} and J. Ostermann and T. Tuytelaars},
-	Date-Added = {2016-07-20 10:03:28 +0000},
-	Date-Modified = {2016-07-20 10:03:28 +0000},
+	Date-Added = {2016-07-26 08:10:43 +0000},
+	Date-Modified = {2016-07-26 08:13:15 +0000},
+	Icon = {{{ site.url }}/images/papers/FenLeaOstTuyICCV2015.png},
 	Journal = {IEEE International Conference on Computer Vision (ICCV)},
+	Owner = {lealtaix},
+	Pllinks = {[PDF]:https://googledrive.com/host/0B1e2GU8Qot86eFVkbnVKY2dBZVU/FenLeaOstTuyICCV2015.pdf},
+	Timestamp = {2016.07.07},
 	Title = {Continuous Pose Estimation with a Spatial Ensemble of Fisher Regressors},
 	Year = {2015}}
+
+@article{henschelarxiv2016,
+	Author = {R. Henschel and {\bf L. Leal-Taix{\'e}} and B. Rosenhahn and K. Schindler},
+	Date-Added = {2016-07-26 08:08:11 +0000},
+	Date-Modified = {2016-07-26 08:17:02 +0000},
+	Icon = {{{ site.url }}/images/papers/HenLeaRosSchArxiv2016.pdf},
+	Journal = {arXiv:1607.07304},
+	Owner = {lealtaix},
+	Pllinks = {[PDF]:http://arxiv.org/abs/1607.07304},
+	Timestamp = {2016.07.07},
+	Title = {Tracking with multi-level features},
+	Year = {2016}}
 
 @book{lealbook2012,
 	Author = {F. Dellaert and J.-M. Frahm and M. Pollefeys and <strong>L. Leal-Taix{\'e}</strong> and B. Rosenhahn},
