add robertos paper and icon

--- a/mypubs.bib
+++ b/mypubs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Laura Leal-Taixé at 2016-07-26 10:17:02 +0200 
+%% Created for Laura Leal-Taixé at 2016-07-26 10:34:40 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -24,8 +24,8 @@
 @article{henschelarxiv2016,
 	Author = {R. Henschel and {\bf L. Leal-Taix{\'e}} and B. Rosenhahn and K. Schindler},
 	Date-Added = {2016-07-26 08:08:11 +0000},
-	Date-Modified = {2016-07-26 08:17:02 +0000},
-	Icon = {{{ site.url }}/images/papers/HenLeaRosSchArxiv2016.pdf},
+	Date-Modified = {2016-07-26 08:34:40 +0000},
+	Icon = {{{ site.url }}/images/papers/HenLeaRosSchArxiv2016.png},
 	Journal = {arXiv:1607.07304},
 	Owner = {lealtaix},
 	Pllinks = {[PDF]:http://arxiv.org/abs/1607.07304},
