updated pub reference

--- a/mypubs.bib
+++ b/mypubs.bib
@@ -2,7 +2,7 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Laura Leal-Taixé at 2016-07-26 10:34:40 +0200 
+%% Created for Laura Leal-Taixé at 2016-10-04 16:11:13 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -12,11 +12,11 @@
 @article{fenziiccv2015,
 	Author = {M. Fenzi and {\bf L. Leal-Taix{\'e}} and J. Ostermann and T. Tuytelaars},
 	Date-Added = {2016-07-26 08:10:43 +0000},
-	Date-Modified = {2016-07-26 08:13:15 +0000},
+	Date-Modified = {2016-10-04 14:11:13 +0000},
 	Icon = {{{ site.url }}/images/papers/FenLeaOstTuyICCV2015.png},
 	Journal = {IEEE International Conference on Computer Vision (ICCV)},
 	Owner = {lealtaix},
-	Pllinks = {[PDF]:https://googledrive.com/host/0B1e2GU8Qot86eFVkbnVKY2dBZVU/FenLeaOstTuyICCV2015.pdf},
+	Pllinks = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86bEIzb3NzeHJKRWM},
 	Timestamp = {2016.07.07},
 	Title = {Continuous Pose Estimation with a Spatial Ensemble of Fisher Regressors},
 	Year = {2015}}
