image lstm paper

--- a/mypubs.bib
+++ b/mypubs.bib
@@ -1,16 +1,14 @@
-% This file was created with JabRef 2.10.
-% Encoding: ISO8859_1
-
+% Encoding: ISO-8859-1
 
 @Article{walcharxiv2016,
-  Title                    = {Image-based Localization with Spatial LSTMs},
-  Author                   = {Florian Walch and Caner Hazirbas and <strong> L. Leal-Taix{\'e} </strong> and Torsten Sattler and Sebastian Hilsenbeck and Daniel Cremers},
-  Journal                  = {https://arxiv.org/abs/1611.07890},
-  Year                     = {2016},
-  Pllinks                  = {[PDF]:https://arxiv.org/abs/1611.07890},
-
-  Owner                    = {lealtaix},
-  Timestamp                = {2016.11.24}
+  author    = {Florian Walch and Caner Hazirbas and <strong> L. Leal-Taix{\'e} </strong> and Torsten Sattler and Sebastian Hilsenbeck and Daniel Cremers},
+  title     = {Image-based Localization with Spatial LSTMs},
+  journal   = {https://arxiv.org/abs/1611.07890},
+  year      = {2016},
+  icon      = {{{ site.url }}/images/papers/WalHazLeaSatHilCreArxiv2016.png},
+  pllinks   = {[PDF]:https://arxiv.org/abs/1611.07890},
+  owner     = {lealtaix},
+  timestamp = {2016.11.24},
 }
 
 @Article{caellesarxiv2016,
@@ -104,18 +102,17 @@
 }
 
 @Article{milancvpr2015,
-  Title                    = {Joint Tracking and Segmentation of Multiple Targets},
-  Author                   = {A. Milan and <strong>L. Leal-Taix{\'e}</strong> and K. Schindler and I. Reid},
-  Year                     = {2015},
-
-  Icon                     = {{{ site.url }}/images/papers/MilLeaSchReiCVPR2015.png},
-  Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86S0t6VU82cUFVOG8},
-
-  Booktitle                = {CVPR},
-  Date-added               = {2016-07-07 12:34:30 +0000},
-  Date-modified            = {2016-07-07 12:34:30 +0000},
-  Owner                    = {laurale},
-  Timestamp                = {2015.06.17}
+  author        = {A. Milan and <strong>L. Leal-Taix{\'e}</strong> and K. Schindler and I. Reid},
+  title         = {Joint Tracking and Segmentation of Multiple Targets},
+  journal       = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year          = {2015},
+  icon          = {{{ site.url }}/images/papers/MilLeaSchReiCVPR2015.png},
+  pllinks       = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86S0t6VU82cUFVOG8},
+  booktitle     = {CVPR},
+  date-added    = {2016-07-07 12:34:30 +0000},
+  date-modified = {2016-07-07 12:34:30 +0000},
+  owner         = {laurale},
+  timestamp     = {2015.06.17},
 }
 
 @Article{lealarxiv2015,
@@ -440,5 +437,4 @@
   Timestamp                = {2009.04.04}
 }
 
-@comment{jabref-meta: databaseType:bibtex;}
-
+@Comment{jabref-meta: databaseType:bibtex;}
