--- a/mypubs.bib
+++ b/mypubs.bib
@@ -35,6 +35,7 @@
   icon          = {{{ site.url }}/images/papers/HenLeaRosSchArxiv2016.png},
   pllinks       = {[PDF]:https://arxiv.org/abs/1607.07304},
   authorweb     = {R. Henschel and L. Leal-Taix{\'e} and B. Rosenhahn and K. Schindler},
+  journalshort  = {arXiv:1607.07304},
   date-added    = {2016-07-26 08:08:11 +0000PP},
   date-modified = {2016-07-26 08:34:40 +0000},
   owner         = {lealtaix},
@@ -49,6 +50,7 @@
   icon          = {{{ site.url }}/images/papers/LeaCanSchCVPRW2016.png},
   pllinks       = {[PDF]:https://arxiv.org/abs/1604.07866},
   authorweb     = {L. Leal-Taix{\'e} and C. Canton-Ferrer and K. Schindler},
+  journalshort  = {CVPRW. DeepVision: Deep Learning for Computer Vision.},
   date-added    = {2016-07-07 12:36:46 +0000},
   date-modified = {2016-07-07 12:40:20 +0000},
   timestamp     = {2016.06.01},
@@ -62,6 +64,7 @@
   icon          = {{{ site.url }}/images/papers/MilLeaReiRotSchArxiv2016.png},
   pllinks       = {[PDF]:https://arxiv.org/abs/1603.00831; [MOTChallenge]:http://www.motchallenge.net/},
   authorweb     = {A. Milan and L. Leal-Taix{\'e} and I. Reid and S. Roth and K. Schindler},
+  journalshort  = {arXiv:1603.00831},
   date-added    = {2016-07-07 12:35:22 +0000},
   date-modified = {2016-07-07 12:40:09 +0000},
   timestamp     = {2016.05.05},
