CVPR paper OSVOS

--- a/mypubs.bib
+++ b/mypubs.bib
@@ -1,5 +1,4 @@
-% This file was created with JabRef 2.10.
-% Encoding: ISO8859_1
+% Encoding: ISO-8859-1
 
 
 @Article{walcharxiv2016,
@@ -17,20 +16,18 @@
   Timestamp                = {2016.11.24}
 }
 
-@Article{caellesarxiv2016,
-  Title                    = {One-Shot Video Object Segmentation},
-  Author                   = {S. Caelles and K.-K. Maninis and J. Pont-Tuset and \textbf{L. Leal-Taix{\'e}} and D. Cremers and L. Van Gool},
-  Journal                  = {arXiv:1611.05198},
-  Year                     = {2016},
-
-  Icon                     = {{{ site.url }}/images/papers/CaeManPonLeaCreVanArxiv2016.png},
-  Pllinks                  = {[PDF]:https://arxiv.org/abs/1611.05198},
-
-  Authorweb                = {S. Caelles and K.-K. Maninis and J. Pont-Tuset and L. Leal-Taix{\'e} and D. Cremers and L. Van Gool},
-  Date-added               = {2016-11-23 09:55:21 +0000},
-  Date-modified            = {2016-11-23 09:57:02 +0000},
-  Journalshort             = {arXiv:1611.05198},
-  Timestamp                = {2016.11.20}
+@Article{caellescvpr2017,
+  author        = {S. Caelles and K.-K. Maninis and J. Pont-Tuset and \textbf{L. Leal-Taix{\'e}} and D. Cremers and L. Van Gool},
+  title         = {One-Shot Video Object Segmentation},
+  journal       = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year          = {2017},
+  icon          = {{{ site.url }}/images/papers/CaeManPonLeaCreVanArxiv2016.png},
+  pllinks       = {[PDF]:https://arxiv.org/abs/1611.05198},
+  authorweb     = {S. Caelles and K.-K. Maninis and J. Pont-Tuset and L. Leal-Taix{\'e} and D. Cremers and L. Van Gool},
+  journalshort  = {CVPR},
+  date-added    = {2016-12-23 09:55:21 +0000},
+  date-modified = {2016-12-23 09:57:02 +0000},
+  timestamp     = {2016.11.20},
 }
 
 @Article{henschelarxiv2016,
@@ -490,5 +487,4 @@
   Timestamp                = {2009.04.04}
 }
 
-@comment{jabref-meta: databaseType:bibtex;}
-
+@Comment{jabref-meta: databaseType:bibtex;}
