update of CVPR17

--- a/mypubs.bib
+++ b/mypubs.bib
@@ -1,34 +1,28 @@
-% This file was created with JabRef 2.10.
-% Encoding: ISO8859_1
-
+% Encoding: ISO-8859-1
 
 @Article{hazirbas:arxiv:2017,
-  Title                    = {Deep Depth from Focus},
-  Author                   = {C. Hazirbas and \textbf{L. Leal-Taix{\'e}} and D. Cremers},
-  Journal                  = {arXiv:1704.01085},
-  Year                     = {2017},
-
-  Icon                     = {{{ site.url }}/images/papers/HazLeaCre2017.png},
-  Pllinks                  = {[PDF]:https://arxiv.org/abs/1704.01085},
-
-  Owner                    = {lealtaix},
-  Timestamp                = {2017.04.05}
+  author    = {C. Hazirbas and \textbf{L. Leal-Taix{\'e}} and D. Cremers},
+  title     = {Deep Depth from Focus},
+  journal   = {arXiv:1704.01085},
+  year      = {2017},
+  icon      = {{{ site.url }}/images/papers/HazLeaCreArxiv2017.png},
+  pllinks   = {[PDF]:https://arxiv.org/abs/1704.01085},
+  owner     = {lealtaix},
+  timestamp = {2017.04.05},
 }
 
 @Article{caellescvpr2017,
-  Title                    = {One-Shot Video Object Segmentation},
-  Author                   = {S. Caelles and K.-K. Maninis and J. Pont-Tuset and \textbf{L. Leal-Taix{\'e}} and D. Cremers and L. Van Gool},
-  Journal                  = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
-  Year                     = {2017},
-
-  Icon                     = {{{ site.url }}/images/papers/CaeManPonLeaCreVanArxiv2016.png},
-  Pllinks                  = {[PDF]:https://arxiv.org/abs/1611.05198},
-
-  Authorweb                = {S. Caelles and K.-K. Maninis and J. Pont-Tuset and L. Leal-Taix{\'e} and D. Cremers and L. Van Gool},
-  Date-added               = {2016-12-23 09:55:21 +0000},
-  Date-modified            = {2016-12-23 09:57:02 +0000},
-  Journalshort             = {CVPR},
-  Timestamp                = {2017.01.20}
+  author        = {S. Caelles and K.-K. Maninis and J. Pont-Tuset and \textbf{L. Leal-Taix{\'e}} and D. Cremers and L. Van Gool},
+  title         = {One-Shot Video Object Segmentation},
+  journal       = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR)},
+  year          = {2017},
+  icon          = {{{ site.url }}/images/papers/CaeManPonLeaCreVanCVPR2017.png},
+  pllinks       = {[PDF]:https://arxiv.org/abs/1611.05198},
+  authorweb     = {S. Caelles and K.-K. Maninis and J. Pont-Tuset and L. Leal-Taix{\'e} and D. Cremers and L. Van Gool},
+  journalshort  = {CVPR},
+  date-added    = {2016-12-23 09:55:21 +0000},
+  date-modified = {2016-12-23 09:57:02 +0000},
+  timestamp     = {2017.01.20},
 }
 
 @Article{walcharxiv2016,
@@ -503,5 +497,4 @@
   Timestamp                = {2009.04.04}
 }
 
-@comment{jabref-meta: databaseType:bibtex;}
-
+@Comment{jabref-meta: databaseType:bibtex;}
