cvpr17 update fix

--- a/mypubs.bib
+++ b/mypubs.bib
@@ -1,14 +1,16 @@
 % Encoding: ISO-8859-1
 
 @Article{hazirbas:arxiv:2017,
-  author    = {C. Hazirbas and \textbf{L. Leal-Taix{\'e}} and D. Cremers},
-  title     = {Deep Depth from Focus},
-  journal   = {arXiv:1704.01085},
-  year      = {2017},
-  icon      = {{{ site.url }}/images/papers/HazLeaCreArxiv2017.png},
-  pllinks   = {[PDF]:https://arxiv.org/abs/1704.01085},
-  owner     = {lealtaix},
-  timestamp = {2017.04.05},
+  author       = {C. Hazirbas and \textbf{L. Leal-Taix{\'e}} and D. Cremers},
+  title        = {Deep Depth from Focus},
+  journal      = {arXiv:1704.01085},
+  year         = {2017},
+  icon         = {{{ site.url }}/images/papers/HazLeaCreArxiv2017.png},
+  pllinks      = {[PDF]:https://arxiv.org/abs/1704.01085},
+  authorweb    = {C. Hazirbas and L. Leal-Taix{\'e} and D. Cremers},
+  journalshort = {arXiv:1704.01085},
+  owner        = {lealtaix},
+  timestamp    = {2017.04.05},
 }
 
 @Article{caellescvpr2017,
