tracking the trackers added

--- a/mypubs.bib
+++ b/mypubs.bib
@@ -92,22 +92,20 @@
 }
 
 @Article{lealbookchapter2012,
-  Title                    = {Pedestrian interaction in tracking: the social force model and global optimization methods},
-  Author                   = {\textbf{L. Leal-Taix{\'e}} and B. Rosenhahn},
-  Journal                  = {Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspective},
-  Year                     = {2013},
-
-  Icon                     = {{{ site.url }}/images/papers/LeaRosBookChapter2012.png},
-  Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U; [Code]:{{ site.url }}/code},
-
-  Authorweb                = {L. Leal-Taix{\'e} and B. Rosenhahn},
-  Chapter                  = {Pedestrian interaction in tracking: the social force model and global optimization methods},
-  Date-added               = {2016-07-07 12:34:13 +0000},
-  Date-modified            = {2016-07-07 12:34:13 +0000},
-  Editor                   = {S. Ali and K. Nishino and D. Manocha and M. Shah},
-  Publisher                = {Springer Berlin Heidelberg},
-  Series                   = {The International Series in Video Computing},
-  Timestamp                = {2016.02.02}
+  author        = {\textbf{L. Leal-Taix{\'e}} and B. Rosenhahn},
+  title         = {Pedestrian interaction in tracking: the social force model and global optimization methods},
+  journal       = {Modeling, Simulation and Visual Analysis of Crowds: A multidisciplinary perspective},
+  year          = {2013},
+  icon          = {{{ site.url }}/images/papers/LeaRosBookChapter2012.png},
+  pllinks       = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86aWtaeTNoNjJiQ0U; [Code]:{{ site.url }}/code},
+  authorweb     = {L. Leal-Taix{\'e} and B. Rosenhahn},
+  chapter       = {Pedestrian interaction in tracking: the social force model and global optimization methods},
+  date-added    = {2013-07-07 12:34:13 +0000},
+  date-modified = {2013-07-07 12:34:13 +0000},
+  editor        = {S. Ali and K. Nishino and D. Manocha and M. Shah},
+  publisher     = {Springer Berlin Heidelberg},
+  series        = {The International Series in Video Computing},
+  timestamp     = {2013.02.02},
 }
 
 @Article{fenziiccv2015,
@@ -263,18 +261,16 @@
 }
 
 @Article{maleschlijskibio2011,
-  Title                    = {A stereoscopic approach for three dimensional tracking of marine biofouling microorganisms},
-  Author                   = {S. Maleschlijski and \textbf{L. Leal-Taix{\'e}} and S. Weisse and A. Di Fino and N. Aldred and A. S. Clare and G. H. Sendra and B. Rosenhahn and A. Rosenhahn},
-  Journal                  = {Microscopic Image Analysis with Applications in Biology (MIAAB)},
-  Year                     = {2011},
-
-  Icon                     = {{{ site.url }}/images/papers/MalLeaWeiFinAldClaSenRosRos2011.png},
-  Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86OE8ySk13ZjRUdlk},
-
-  Authorweb                = {S. Maleschlijski and L. Leal-Taix{\'e} and S. Weisse and A. Di Fino and N. Aldred and A. S. Clare and G. H. Sendra and B. Rosenhahn and A. Rosenhahn},
-  Date-added               = {2016-07-07 12:34:13 +0000},
-  Date-modified            = {2016-07-07 12:34:13 +0000},
-  Timestamp                = {2012.10.10}
+  author        = {S. Maleschlijski and \textbf{L. Leal-Taix{\'e}} and S. Weisse and A. Di Fino and N. Aldred and A. S. Clare and G. H. Sendra and B. Rosenhahn and A. Rosenhahn},
+  title         = {A stereoscopic approach for three dimensional tracking of marine biofouling microorganisms},
+  journal       = {Microscopic Image Analysis with Applications in Biology (MIAAB)},
+  year          = {2011},
+  icon          = {{{ site.url }}/images/papers/MalLeaWeiFinAldClaSenRosRos2011.png},
+  pllinks       = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86OE8ySk13ZjRUdlk},
+  authorweb     = {S. Maleschlijski and L. Leal-Taix{\'e} and S. Weisse and A. Di Fino and N. Aldred and A. S. Clare and G. H. Sendra and B. Rosenhahn and A. Rosenhahn},
+  date-added    = {2016-07-07 12:34:13 +0000},
+  date-modified = {2016-07-07 12:34:13 +0000},
+  timestamp     = {2011.10.10},
 }
 
 @Article{fenzidagm2012,
@@ -293,18 +289,16 @@
 }
 
 @Article{ponsdagm2011,
-  Title                    = {Efficient and robust shape matching for model based human motion capture},
-  Author                   = {G. Pons-Moll and \textbf{L. Leal-Taix{\'e}} and T. Truong and B. Rosenhahn},
-  Journal                  = {German Conference on Pattern Recognition (GCPR)},
-  Year                     = {2011},
-
-  Icon                     = {{{ site.url }}/images/papers/PonLeaTruRosDAGM2011.png},
-  Pllinks                  = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86M0s0LXY1NDNhVm8},
-
-  Authorweb                = {G. Pons-Moll and L. Leal-Taix{\'e} and T. Truong and B. Rosenhahn},
-  Date-added               = {2016-07-07 12:34:13 +0000},
-  Date-modified            = {2016-07-07 12:34:13 +0000},
-  Timestamp                = {2012.09.09}
+  author        = {G. Pons-Moll and \textbf{L. Leal-Taix{\'e}} and T. Truong and B. Rosenhahn},
+  title         = {Efficient and robust shape matching for model based human motion capture},
+  journal       = {German Conference on Pattern Recognition (GCPR)},
+  year          = {2011},
+  icon          = {{{ site.url }}/images/papers/PonLeaTruRosDAGM2011.png},
+  pllinks       = {[PDF]:https://drive.google.com/open?id=0B1e2GU8Qot86M0s0LXY1NDNhVm8},
+  authorweb     = {G. Pons-Moll and L. Leal-Taix{\'e} and T. Truong and B. Rosenhahn},
+  date-added    = {2016-07-07 12:34:13 +0000},
+  date-modified = {2016-07-07 12:34:13 +0000},
+  timestamp     = {2011.09.09},
 }
 
 @Article{lealcvpr2012,
@@ -497,6 +491,18 @@
   Date-added               = {2016-07-07 12:34:13 +0000},
   Date-modified            = {2016-07-07 12:34:13 +0000},
   Timestamp                = {2009.04.04}
+}
+
+@Article{lealtaixearxiv2017,
+  author       = {\textbf{L. Leal-Taix{\'e}} and A. Milan and K. Schindler and D. Cremers and I. Reid and S. Roth},
+  title        = {Tracking the Trackers: An Analysis of the State of the Art in Multiple Object Tracking},
+  journal      = {arXiv:1704.02781},
+  year         = {2017},
+  icon         = {{{ site.url }}/images/papers/LeaMilSchCreReiRotArxiv2017.png},
+  pllinks      = {[PDF]:https://arxiv.org/abs/1704.02781},
+  authorweb    = {L. Leal-Taix{\'e} and A. Milan and K. Schindler and D. Cremers and I. Reid and S. Roth},
+  journalshort = {arXiv:1704.02781},
+  timestamp    = {2017.04.12},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
